# .github

./: Cargo.toml  aggregate-issue.md  bors.toml  deny.toml  lints.toml  vet-status  vet-status.md
.github/: dependabot.yml  lints.toml
.github/actions/setup/: action.yml
.github/workflows/: _self_test.yml  _self_test_nightly.yml  _self_test_pull_request.yml  _self_test_staging.yml  _supply_chain.yml  audit.yml  clippy.yml  coverage.yml  deny.yml  docsrs.yml  features.yml  fmt.yml  minimal-versions.yml  nightly.yml  platforms.yml  pull_request.yml  self-test.yml  staging.yml  test.yml  updates.yml  vet-status.yml  vet.yml
src/: main.rs
supply-chain/: README.md  first-party-audits.toml  first-party-sources.list  third-party-audits.toml  third-party-sources.list
workflows/: cargo.yml  clippy.yml  docsrs.yml  features.yml  fmt.yml  minimal-versions.yml  nightly.yml  platforms.yml  pull_request.yml  staging.yml  test.yml  updates.yml
